--- a/module_maintainment/pages/addModule/index.wxml
+++ b/module_maintainment/pages/addModule/index.wxml
@@ -39,7 +39,11 @@
               BEFORE 
             </view>
             <view class="">
-              <input bindinput="beforeInput" class="weui-input custom-input" maxlength="10" placeholder="Voltage (V)" />
+                <input 
+                    bindinput="beforeInput" 
+                    class="weui-input custom-input" 
+                    maxlength="10" 
+                    placeholder="Voltage (V)" />
             </view>
             </van-col>
             <van-col span="12" >
@@ -70,4 +74,5 @@
     <van-dialog 
         id="van-dialog"
         />
+    <van-notify id="van-notify" />
 </view>
